[package]
name = "dioxus_test"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-desktop = { git = "https://github.com/dioxuslabs/dioxus" }